--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,3 @@
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  width: 100%;
-  height: 6rem;
-}
-
 .main {
   font-family: var(--font-mono);
 }
@@ -64,6 +56,28 @@
   cursor: pointer;
   color: white;
   background-color: #6674F4;
+}
+
+
+.tableAdd {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.newRegister {
+  height: 3.3125rem;
+  margin-bottom: 1.375rem;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  border: 2px solid;
+  border-radius: 0.6rem;
+  font-family: var(--font-mono);
+  cursor: pointer;
+  color: black;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .saveButton:hover {
