--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,7 +15,7 @@ body {
   max-width: 100vw;
   height: 100%;
   overflow-x: hidden;
-  background-color: 'F6F5FC';
+  background-color: #F6F5FC;
 }
 
 a {
